<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".AuthenticateActivity" >



    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/default_profile"
        android:layout_gravity="center"
        />
    <TextView
        android:text="Choose a image"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:textColor="@color/textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/textColorPrimary"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/textColorPrimary"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textEmailAddress" >

    </EditText>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/textColorPrimary"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textEmailAddress" >

    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/textColorPrimary"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress" >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ParseLoginUI.Button"
        android:layout_alignParentLeft="true"
        android:text="@string/signup_button_label" />

    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/signup_text"
        android:textColor="@color/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:text="" />

    </LinearLayout>
</LinearLayout>