<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/kc_bg"
    tools:context=".AuthenticateActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="Kconnect Logo"
        android:scaleType="center"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_signup_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ParseLoginUI.Button"
                android:layout_weight="1"

                android:text="@string/loginButtonLabel" />

            <Button
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                style="@style/ParseLoginUI.Button"
                android:text="@string/title_forget_password" />

        </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:text="" />

        </LinearLayout>

</LinearLayout>